k8s/resources/istio/okta-authorization-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: okta-authorization-policy
spec:
  selector:
    matchLabels:
      type: backend
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["https://dev-909112.okta.com/oauth2/default/*"]
